--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -199,11 +199,21 @@ ul {
 .recenzijeTitle {
   margin-top: 10%;
   margin-bottom:0%;
+  margin-right:0%;
+  margin-left:0%;
   text-align:center;
-  color:#000d8a;
+  width:100%;
+  height: auto;
+  border-radius: 50px;
+  color:#ffffff;
   font-family: "agency fb";
   font-size:400%;
   text-shadow: 2px 2px 4px #000000;
+  background-image: url(../../public/bgfooteribg.png);
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  padding-top:100px;
 }
 
 .recenzijeSubtitle {
@@ -223,7 +233,8 @@ ul {
   font-size: 100%;
   border: 2px solid #000000; 
   border-radius: 50px;
-  background-color: #d8d8d8;
+  background-color: #000dff;
+  color:#000;
   padding: 1%;
   width: 50%; 
   max-width: 400px; 
@@ -313,7 +324,7 @@ ul {
   border: 2px solid #000000; 
   border-radius: 10px;
   background-color: #000000;
-  color:#d8d8d8;
+  color:#88b6ff;
   padding: 0%;
   width: 50%; 
   max-width: 400px; 
@@ -333,7 +344,7 @@ ul {
   border-radius: 50px;
   padding-bottom:50px;
   width: 60%;
-  background-color: #d8d8d8;
+  background-color: #d4d4d4;
   padding-left:50px;
   padding-right:50px;
 }
