--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ import '@fortawesome/fontawesome-free/css/all.min.css';
 
 <header class="fixed top-0 left-0 blur-background w-full shadow-md h-14 flex items-center">
   <nav class="flex items-center justify-around h-full w-full flex items-center p-0">
-    <img id="navbar-logo" src="/smetovi-logo.png" alt="Smetovi Logo" class="p-2 w-35vw md:w-20vw lg:w-64">
+    <a href="/"><img id="navbar-logo" src="/smetovi-logo.png" alt="Smetovi Logo" class="p-2 w-35vw md:w-20vw lg:w-64"></a>
     <div class="internal-links hidden md:block">
       <HeaderLink href="/map">Mapa</HeaderLink>
       <HeaderLink href="/">Home</HeaderLink>
