--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,24 +18,21 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		</main>
 		<!-- Monument -->
 		<div class="flex max-sm:flex-col lg:h-screen overflow-hidden observed">
-			<!-- image -->
 			<div class="relative w-3/5 max-sm:w-screen fade slide-left">
 				<img src="/tmp-images/Monument_s.jpg" alt="" width="100%" class="z-0 h-full w-full object-cover" style="filter: brightness(1.5);">
 				<div class="absolute inset-0 bg-gradient-to-r max-sm:bg-gradient-to-b from-transparent from-50% to-white"></div>
 			</div>
-			<!-- text -->
 			<div class="relative w-2/5 max-sm:w-screen z-10 items-center -ml-20 max-sm:ml-0 mt-[120px] max-sm:-mt-40 text-blue-950 max-sm:p-4 fade slide-bottom">
 				<h1 class="text-3xl font-exo2 font-bold mb-2 text-blue-950"> ZENIČKA PLANINSKA OAZA </h1>
 				<div class="ttl-sep w-20 h-1 bg-orange-500 my-2"></div>
 				<p class="mt-5 text-[18px]">
-					Smetovi, planina smještena u općini Zenica, uzdiže se na 1.025metara nadmorke visine, oko 8 kilometara od centra grada.
+					Smetovi, planina smještena u općini Zenica, uzdiže se na 1.025 metara nadmorske visine, oko 8 kilometara od centra grada.
 					Popularno izletište nudi staze za šetnju, biciklizam, zimske sportove i sportske terene, uz restoran, prenoćište i sportsko-rekreacijski centar.
 				</p>
 				<p class="mt-4 text-[18px]" >
-					Prema predaji, ime "Smetovi" potječe od gorostasa Vrana koji se zbunio u borbi s ratnikom Dukom, što je ostavilo trag u nazivu
-					ovog područja. Na vrhu planine nalazi se spomenik borcima Zeničkog partizanskog odreda iz 1968. godine. Sa Smetova se, za vedrog dana,
+					Na vrhu planine nalazi se spomenik borcima Zeničkog partizanskog odreda iz 1968. godine. Sa Smetova se, za vedrog dana,
 					pruža pogled do 100 km, obuhvatajući planine poput Zvijezde, Vranice i Vlašića. Planinarsko društvo "Željezara" vodi planinarski dom,
-					smješten uz potok Mračaju na 940 metara nadmorske visine.
+					smješten uz potok Mračaja na 940 metara nadmorske visine.
 				</p>
 				<a href="/map">
 					<button class="bg-blue-950 px-10 py-2 mt-5 text-white" style="clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 10px, 100% 100%, 10px 100%, 0 calc(100% - 10px));">
@@ -46,13 +43,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		</div>
 		<!-- Fauna and flora -->
 		<div class="flex max-sm:flex-col-reverse lg:h-screen overflow-hidden observed">
-			<!-- text -->
 			<div class="relative w-2/5 max-sm:w-screen z-10 items-center ml-20 -mr-20 max-sm:ml-0 max-sm:mr-0 mt-[120px] max-sm:-mt-40 text-blue-950 max-sm:p-4 fade slide-bottom">
 				<h1 class="text-3xl font-exo2 font-bold mb-2 text-blue-950"> FLORA I FAUNA </h1>
 				<div class="ttl-sep w-20 h-1 bg-orange-500 my-2"></div>
 				<p class="mt-5 text-[18px]">
-					Prirodna ljepota Smetova nadupunjuje se njegovim ekološkim značajem. Dom je raznolikom biljnom i životinjskom svijetu,
-					neki od njih endemični za regiju, čineći ga važnim područjem za očuvanje biološke raznolikosti.
+					Prirodna ljepota Smetova nadopunjuje se njegovim ekološkim značajem. Smetovi su dom raznolikom biljnom i životinjskom svijetu,
+					čineći ga važnim područjem za očuvanje biološke raznolikosti.
 				</p>
 				<p class="mt-4 text-[18px]" >
 					Za one koji posjećuju Zenicu, putovanje do Smetova nije samo planinarenje; to je prilika za povezivanje s prirodom,
@@ -65,7 +61,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 					</button>
 				</a>
 			</div>
-			<!-- image -->
 			<div class="relative w-3/5 max-sm:w-screen fade slide-right">
 				<picture>
 					<source media="(max-width: 640px)" srcset="/tmp-images/Fox_s.jpg">
